--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,53 @@ table {
 
 
 /* Write your css below here */
+
+header{
+	font-size: xx-large;
+	color: rgb(7, 9, 57);
+	padding-left: 20px;
+	display: flex;
+	align-items: center;
+	height: 80px;
+	background-color: #9d9dea;
+}
+
+.container{
+	margin: 100px 150px;
+}
+
+main{
+	padding-top: 100px;
+	display: grid;
+	min-height: 80vh;
+	grid-template-columns: 1fr 1fr 1fr;
+	/* grid-template-areas: ; */
+}
+
+.articles{
+	height: 300px;
+	width: 400px;
+	display: flex;
+	flex-direction: column;
+	display: flex;
+	padding: 20px;
+
+}
+
+.image{
+	background-color: aqua;
+	flex: 2;
+}
+.text{
+	display: flex;
+	flex-direction: column;
+	padding-top: 5px;
+	gap: 10px;
+	background-color: rgb(236, 233, 230);
+	flex: 1;
+}
+
+.image img{
+	height:200px;
+	width: 400px;
+}
